# cicliminds-lib

./: .gitignore  README.md  setup.cfg
cicliminds-lib/query/: models.py
ciclimindsLib/query/: datasets.py
cicliminds_lib/: bindings.py  config.py  masks.py  math.py  stats.py  ui.py  utils.py
cicliminds_lib/bindings/: cdo.py  utils.py
cicliminds_lib/mask/: api.py  mask.py
cicliminds_lib/masks/: loaders.py  masks.py
cicliminds_lib/plotting/: _helpers.py  config.py  configs.py  elements.py  plot_recipes.py
cicliminds_lib/plotting/recipes/: hists_of_means.py  mean_val.py  means_of_hists.py  other.py  time_series.py  timeavgs.py
cicliminds_lib/query/: datasets.py  files.py  models.py
cicliminds_lib/unify/: api.py  merge.py  model_weights.py
cicliminds_lib/unify/datasets/: merge.py
cicliminds_lib/unify/model_weights/: merge.py  normalize.py
scripts/: nc_model_weights_to_tsv.py
tests/: test_weights.py
