[metadata]
name = cicliminds-lib
version = 0.1.0
author = vindex10
author_email = vindex10@gmail.com
description = Utilities for analysing and visualizing climate indices data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vindex10/cicliminds-lib
project_urls =
    Bug Tracker = https://github.com/vindex10/cicliminds-lib/issues

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
