[metadata]
name = cicliminds-lib
version = 0.6.0
author = vindex10
author_email = vindex10@gmail.com
description = Utilities for analysing and visualizing climate indices data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vindex10/cicliminds-lib
project_urls =
    Bug Tracker = https://github.com/vindex10/cicliminds-lib/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    netCDF4==1.5.*
    numpy==1.20.*
    scipy==1.6.*
    xarray==0.18.*
    xhistogram==0.3.*
    pandas==1.2.*
    regionmask==0.6.*
    shapely==1.7.*
    matplotlib==3.4.*
    importlib-resources==5.*;python_version<'3.9'
